fix rating overflow

--- a/app/assets/stylesheets/components/ratings.css.scss
+++ b/app/assets/stylesheets/components/ratings.css.scss
@@ -1,6 +1,7 @@
 [type="range"].range_rating {
   visibility: hidden;
   position: absolute;
+  width: 0;
   z-index: -1;
 }
 
